add !!! to obesitas desc

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         case "obesitas":
                             document.getElementById("right-div").style.backgroundColor = "black";
                             document.getElementById("right-div").style.color = "white";
-                            document.getElementById("bmi-description").innerHTML = "<strong>ANDA OBESITAS</strong>";
+                            document.getElementById("bmi-description").innerHTML = "<strong>ANDA OBESITAS!!!</strong>";
                             break;
                         default:
                             break;
