styling to grey

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </form>
             </div>
             <div id="right-div">
-                <h1 id="calc-result"><strong></strong></h1>
+                <h1 id="calc-result"></h1>
                 <h1 id="bmi-description"></h1>
             </div>
         </main>
