--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
             <input class="sex-form" type="radio" name="sex" value="F" required="true">
             <label for="sex">Wanita</label>
           </div>
+          <hr>
           <div class="weight-form">
             <label for="weight"><strong>Berat</strong></label><br>
             <input class="weight-form" id="weight" type="text" name="weight" required oninput="calcBMI()">
           </div>
+          <hr>
           <div class="age-form">
             <label for="age"><strong>Umur</strong></label><br>
-            <input class="age-form" type="password" name="age" pattern="(^(^[2-9][0-9]$)|(^[1-9][0-9]{2,}$)" oninvalid="setCustomValidity('Umur cuman untuk 20 tahun keatas')" onvalid="setCustomValidity('')">
+            <input class="age-form" type="password" name="age" pattern="(^[2-9][0-9]$)|(^[1-9][0-9]{2,}$)" oninvalid="setCustomValidity('Umur cuman untuk 20 tahun keatas')" onvalid="setCustomValidity('')">
           </div>
           <div class="height-form">
             <label for="height"><strong>Tinggi</strong></label><br>
